...
                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="k7N-7g-gsd" userLabel="Top">
                                <rect key="frame" x="132" y="129" width="336" height="52"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="GenericCard" translatesAutoresizingMaskIntoConstraints="NO" id="j8f-C9-gGB">
                                        <rect key="frame" x="8" y="8" width="56" height="38"/>
                                    </imageView>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="1234 5678 9012 3456" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="w7G-Zw-0kv">
                                        <rect key="frame" x="68" y="8" width="260" height="38"/>
                                        <color key="backgroundColor" red="0.97636467218399048" green="0.97653156518936157" blue="0.97635418176651001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="textColor" red="0.12849333882331848" green="0.13209271430969238" blue="0.13448604941368103" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                                        <connections>
...
                                    <constraint firstItem="j8f-C9-gGB" firstAttribute="leading" secondItem="k7N-7g-gsd" secondAttribute="leading" constant="8" id="omk-yl-4VY"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8uY-rn-wR7" userLabel="Bottom">
                                <rect key="frame" x="132" y="194" width="336" height="52"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="MM/YY" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bYE-T0-7T0">
                                        <rect key="frame" x="70" y="7" width="85" height="38"/>
                                        <color key="backgroundColor" red="0.97636467218399048" green="0.97653156518936157" blue="0.97635418176651001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="textColor" red="0.12928679585456848" green="0.13335999846458435" blue="0.13335761427879333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                        <connections>
                                            <action selector="editingChanged:" destination="vXZ-lx-hvc" eventType="editingChanged" id="yhP-lK-9XT"/>
                                            <outlet property="delegate" destination="vXZ-lx-hvc" id="knK-gH-Z3N"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CCV" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UFw-fv-foc">
                                        <rect key="frame" x="181" y="6" width="85" height="38"/>
                                        <color key="backgroundColor" red="0.97636467218399048" green="0.97653156518936157" blue="0.97635418176651001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <color key="textColor" red="0.12928679585456848" green="0.13335999846458435" blue="0.13335761427879333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                        <connections>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqy-3R-mmG">
                                <rect key="frame" x="256" y="274" width="89" height="36"/>
                                <color key="backgroundColor" red="0.97636467218399048" green="0.97653156518936157" blue="0.97635418176651001" alpha="0.41000000000000003" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="submit:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="sJp-7Q-lOA"/>
                                </connections>
...
